ajout des animations, MQ windows resizing done

--- a/Projets/OhMyFood/menu/menu-alafrancaise.html
+++ b/Projets/OhMyFood/menu/menu-alafrancaise.html
@@ -20,7 +20,7 @@
 					
 				<table class="font__table--alafrancaise">
 					<tr class="table__part font__color--alafrancaise-first">
-						<th colspan="2" class="double-line double-line--first"><span>Pour se mettre en appétit</span></th>
+						<th colspan="2" class="double-line double-line--first"><span class="anim-underline anim-underline-first">Pour se mettre en appétit</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-first">
 						<td class="table__cell--left">Tartare de poulpe acidulé aux zests d'orange</td>
@@ -36,7 +36,7 @@
 					</tr>
 					
 					<tr class="font__color--alafrancaise-secund table__part">
-						<th colspan="2" class="double-line double-line--secund"><span>Plaisir des papilles</span></th>
+						<th colspan="2" class="double-line double-line--secund"><span class="anim-underline anim-underline-secund">Plaisir des papilles</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-secund">
 						<td class="table__cell--left">Coquilles Saint-Jacques accompagnées d'une purée de panais</td>
@@ -51,7 +51,7 @@
 						<td class="table__cell--right">175€</td>
 					</tr>
 					<tr class="font__color--alafrancaise-third table__part">
-						<th colspan="2" class="double-line double-line--third"><span>Gourmandises sucrées</span></th>
+						<th colspan="2" class="double-line double-line--third"><span class="anim-underline anim-underline-third">Gourmandises sucrées</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-third">
 						<td class="table__cell--left">Pétales de violettes glacés et purée de noisettes</td>
@@ -70,8 +70,8 @@
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<li>Mentions légales</li>
-    			<li>Contactez-nous</li>
+    			<a href="../ML.html"><li>Mentions légales</li></a>
+    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
     		</ul>
     	</footer>
     </body>
