--- a/Projets/OhMyFood/menu/menu-enchantee.html
+++ b/Projets/OhMyFood/menu/menu-enchantee.html
@@ -19,11 +19,11 @@
 				<div>
 					<img class="img" src="../la-note-enchantee.png" rel="note de musique en dégradé de rouge à orange" />
 				</div>
-				<h2 class="font font__title--enchantee">la note enchantée</h2>
+				<h2 class="font title--enchantee">la note enchantée</h2>
 					
 				<table class="font__table--enchantee">
 					<tr class=" double-line font__table--title table__part">
-						<th colspan="2" class="double-line"><span>Prélude</span></th>
+						<th colspan="2" class="double-line"><span class="anim-underline">Prélude</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Raviolis de foie gras accompagnés de leur crème à la truffe</td>
@@ -43,7 +43,7 @@
 					</tr>
 					
 					<tr class="font__table--title table__part">
-						<th colspan="2" class="double-line"><span>Point d'orgue</span></th>
+						<th colspan="2" class="double-line"><span class="anim-underline">Point d'orgue</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</td>
@@ -58,7 +58,7 @@
 						<td class="table__cell--right">169€</td>
 					</tr>
 					<tr class="font__table--title table__part">
-						<th colspan="2" class="double-line"><span>Mouvement final</span></th>
+						<th colspan="2" class="double-line"><span class="anim-underline">Mouvement final</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</td>
@@ -80,8 +80,8 @@
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<li>Mentions légales</li>
-    			<li>Contactez-nous</li>
+    			<a href="../ML.html"><li>Mentions légales</li></a>
+    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
     		</ul>
     	</footer>
     </body>
