--- a/Projets/OhMyFood/menu/menu-gout.html
+++ b/Projets/OhMyFood/menu/menu-gout.html
@@ -20,7 +20,7 @@
 					
 				<table class="font__table--gout">
 					<tr class="table__part">
-						<th colspan="2" class="double-line--gradient"><span>Esquisse</span></th>
+						<th colspan="2" class="double-line--gradient"><span class="anim-underline">Esquisse</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Fricassé d'escargot au piment d'espelette</td>
@@ -36,7 +36,7 @@
 					</tr>
 					
 					<tr class="table__part">
-						<th colspan="2" class="double-line--gradient"><span>Œuvre du maître</span></th>
+						<th colspan="2" class="double-line--gradient"><span class="anim-underline">Œuvre du maître</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Filet de bœuf aux herbes accompagné de sa ribambelle de légumes</td>
@@ -51,7 +51,7 @@
 						<td class="table__row--last table__cell--right">125€</td>
 					</tr>
 					<tr class="table__part">
-						<th colspan="2" class="double-line--gradient"><span>sommet de l'art</span></th>
+						<th colspan="2" class="double-line--gradient"><span class="anim-underline">sommet de l'art</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Paris-Brest revisité</td>
@@ -73,8 +73,8 @@
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<li>Mentions légales</li>
-    			<li>Contactez-nous</li>
+    			<a href="../ML.html"><li>Mentions légales</li></a>
+    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
     		</ul>
     	</footer>
     </body>
