--- a/Projets/OhMyFood/index.html
+++ b/Projets/OhMyFood/index.html
@@ -13,37 +13,51 @@
 
     	<section class="menus">
 			<a href="menu/menu-enchantee.html" class="menus__card menus__card--orange">	
+				<div class="zoom__menu">	
 					<div>
 						<img src="la-note-enchantee.png" rel="note de musique en dégradé de rouge à orange"/>
 					</div>
 					<h2 class="font font__title font__title--enchantee">La note enchantée</h2>
 					
-					<h3 class="font font__subtitle--enchantee">MENU</h3>	
+					<h3 class="font font__subtitle--enchantee">MENU</h3>
+				</div>	
 			</a>
 
 			<a href="menu/menu-alafrancaise.html" class="menus__card menus__card--pink">
+				<div class="zoom__menu">
 					<h2 class="font font__title font__title--alafrancaise">Le chic à la française</h2>
-					<h3 class="font font__subtitle--alafrancaise">Menu</h3>	
+					<h3 class="font font__subtitle--alafrancaise">Menu</h3>
+				</div>
 			</a>
 
 			<a href="menu/menu-papilles.html" class="menus__card menus__card--blue">
-    			<h2 class="font font__title font__title--papilles">Le délice des papilles</h2>
-				<h3 class="font font__subtitle--papilles">Menu</h3>
+				<div class="zoom__menu--papilles">
+    				<h2 class="font font__title font__title--papilles">Le délice des papilles</h2>
+					<h3 class="font font__subtitle--papilles">Menu</h3>
+				</div>
 			</a>
 
 
-    		<a href="menu/menu-gout.html" class="menus__card menus__card--green">	
+			<a href="menu/menu-gout.html" class="menus__card menus__card--green">
+				<div class="zoom__menu--gout">	
 					<h2 class="font font__title font__title--gout">La palette du goût</h2>
-					<h3 class="font font__subtitle--gout">Menu</h3>		
+					<h3 class="font font__subtitle--gout">Menu</h3>
+				</div>
 			</a>
 
-    		<button class="btn--soon">Prochainement</button>
+			<button class="btn--soon btn--">Prochainement<br />
+			<div class="dot--animation">
+				<span class="btn__dot"></span>
+				<span class="btn__dot"></span>
+				<span class="btn__dot"></span>
+			</div>
+		</button>
     	</section>
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<li>Mentions légales</li>
-    			<li>Contactez-nous</li>
+    			<a href="./ML.html"><li class="btn--shake">Mentions légales</li></a>
+    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
     		</ul>
     	</footer>
     </body>
