--- a/Projets/OhMyFood/menu/menu-papilles.html
+++ b/Projets/OhMyFood/menu/menu-papilles.html
@@ -20,7 +20,7 @@
 					
 				<table class="font__table--papilles">
 					<tr class="table__part">
-						<th colspan="2" class="double-line double-line--first"><span>Pour bien commencer</span></th>
+						<th colspan="2" class="double-line double-line--first"><span class="anim-underline anim-underline-first">Pour bien commencer</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Tartare de thon assaisonné au yuzu</td>
@@ -36,7 +36,7 @@
 					</tr>
 					
 					<tr class="table__part">
-						<th colspan="2" class="double-line double-line--secund"><span>Pour bien continuer</span></th>
+						<th colspan="2" class="double-line double-line--secund"><span class="anim-underline anim-underline-secund">Pour bien continuer</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Poulet rôti aux herbes de Provence et sa crème de truffe</td>
@@ -51,7 +51,7 @@
 						<td class="table__cell--right">115€</td>
 					</tr>
 					<tr class="table__part">
-						<th colspan="2" class="double-line double-line--third"><span>Pour bien terminer</span></th>
+						<th colspan="2" class="double-line double-line--third"><span class="anim-underline anim-underline-third">Pour bien terminer</span></th>
 					</tr>
 					<tr>
 						<td class="table__cell--left">Faarandole de desserts du chef</td>
@@ -74,8 +74,8 @@
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<li>Mentions légales</li>
-    			<li>Contactez-nous</li>
+    			<a href="../ML.html"><li>Mentions légales</li></a>
+    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
     		</ul>
     	</footer>
     </body>
