--- a/Projets/OhMyFood/menu/menu-papilles.html
+++ b/Projets/OhMyFood/menu/menu-papilles.html
@@ -7,9 +7,11 @@
     </head>
 
     <body>
-    	<header class="header">
-    		<h1>Ohmyfood</h1>
-    	</header>
+    	<a href="ohmyfood.html">
+			<header class="header">
+				<h1>Ohmyfood</h1>
+			</header>
+		</a>
 
     	
    		<section class="menus">
