début du mobile first

--- a/Projets/OhMyFood/menu/menu-papilles.html
+++ b/Projets/OhMyFood/menu/menu-papilles.html
@@ -76,8 +76,8 @@
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<a href="../ML.html"><li>Mentions légales</li></a>
-    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
+    			<li class="btn--footer"><a href="../ML.html" target="_blank">Mentions légales</a><div class="btn__bg"></div></li>
+    			<li class="btn--footer"><a href="mailto:team@ohmyfood.com">Contactez-nous</a><div class="btn__bg"></div></li>
     		</ul>
     	</footer>
     </body>
