--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="./css/style.css" />
@@ -7,33 +7,35 @@
     </head>
 
     <body>
-    	<header class="header">
-    		<h1>Ohmyfood</h1>
-    	</header>
+    	<!--<a href="ohmyfood.html">-->
+			<header class="header">
+    			<h1>Ohmyfood</h1>
+			</header>
+		<!--</a>-->
 
     	<section class="menus">
 			<a href="menu/menu-enchantee.html" class="menus__card menus__card--orange">	
-				<div class="zoom__menu">	
+				<div class="zoom__menu--enchantee">	
 					<div>
-						<img src="la-note-enchantee.png" rel="note de musique en dégradé de rouge à orange"/>
+						<img src="la-note-enchantee.png" alt="note de musique en dégradé de rouge à orange"/>
 					</div>
 					<h2 class="font font__title font__title--enchantee">La note enchantée</h2>
 					
-					<h3 class="font font__subtitle--enchantee">MENU</h3>
+					<h3 class="font font__subtitle font__subtitle--enchantee">MENU</h3>
 				</div>	
 			</a>
 
 			<a href="menu/menu-alafrancaise.html" class="menus__card menus__card--pink">
-				<div class="zoom__menu">
+				<div class="zoom__menu--alafrancaise">
 					<h2 class="font font__title font__title--alafrancaise">Le chic à la française</h2>
-					<h3 class="font font__subtitle--alafrancaise">Menu</h3>
+					<h3 class="font font__subtitle font__subtitle--alafrancaise">Menu</h3>
 				</div>
 			</a>
 
 			<a href="menu/menu-papilles.html" class="menus__card menus__card--blue">
 				<div class="zoom__menu--papilles">
     				<h2 class="font font__title font__title--papilles">Le délice des papilles</h2>
-					<h3 class="font font__subtitle--papilles">Menu</h3>
+					<h3 class="font font__subtitle font__subtitle--papilles">Menu</h3>
 				</div>
 			</a>
 
@@ -41,23 +43,23 @@
 			<a href="menu/menu-gout.html" class="menus__card menus__card--green">
 				<div class="zoom__menu--gout">	
 					<h2 class="font font__title font__title--gout">La palette du goût</h2>
-					<h3 class="font font__subtitle--gout">Menu</h3>
+					<h3 class="font font__subtitle font__subtitle--gout">Menu</h3>
 				</div>
 			</a>
 
 			<button class="btn--soon btn--">Prochainement<br />
-			<div class="dot--animation">
+			<span class="dot--animation">
 				<span class="btn__dot"></span>
 				<span class="btn__dot"></span>
 				<span class="btn__dot"></span>
-			</div>
+			</span>
 		</button>
     	</section>
 
     	<footer class="footer">
     		<ul class="footer__list">
-    			<a href="./ML.html"><li class="btn--shake">Mentions légales</li></a>
-    			<a href="mailto:team@ohmyfood.com"><li>Contactez-nous</li></a>
+    			<li class="btn--footer"><a href="./ML.html" target="_blank">Mentions légales</a><div class="btn__bg"></div></li>
+    			<li class="btn--footer"><a href="mailto:team@ohmyfood.com">Contactez-nous</a><div class="btn__bg"></div></li>
     		</ul>
     	</footer>
     </body>
