mobilefirst : séparation des sections menus et btn. lanscape : menus__card width 15% => 20%

--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -46,14 +46,15 @@
 					<h3 class="font font__subtitle font__subtitle--gout">Menu</h3>
 				</div>
 			</a>
-
+		</section>
+		<section class=btn>
 			<button class="btn--soon btn--">Prochainement<br />
-			<span class="dot--animation">
-				<span class="btn__dot"></span>
-				<span class="btn__dot"></span>
-				<span class="btn__dot"></span>
-			</span>
-		</button>
+				<span class="dot--animation">
+					<span class="btn__dot"></span>
+					<span class="btn__dot"></span>
+					<span class="btn__dot"></span>
+				</span>
+			</button>
     	</section>
 
     	<footer class="footer">
