--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -48,13 +48,13 @@
 			</a>
 		</section>
 		<section class=btn>
-			<button class="btn--soon btn--">Prochainement<br />
+			<div class="btn--soon"><h2>Prochainement</h2><br />
 				<span class="dot--animation">
 					<span class="btn__dot"></span>
 					<span class="btn__dot"></span>
 					<span class="btn__dot"></span>
 				</span>
-			</button>
+			</div>
     	</section>
 
     	<footer class="footer">
