--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -16,12 +16,12 @@
     	<section class="menus">
 			<a href="menu/menu-enchantee.html" class="menus__card menus__card--orange">	
 				<div class="zoom__menu--enchantee">	
-					<div>
+					<div class="pos-rel">
 						<img src="la-note-enchantee.png" alt="note de musique en dégradé de rouge à orange"/>
 					</div>
-					<h2 class="font font__title font__title--enchantee">La note enchantée</h2>
+					<h2 class="pos-rel font font__title font__title--enchantee">La note enchantée</h2>
 					
-					<h3 class="font font__subtitle font__subtitle--enchantee">MENU</h3>
+					<h3 class="pos-rel font font__subtitle font__subtitle--enchantee">MENU</h3>
 				</div>	
 			</a>
 
