ohmyfood.html => pos relative enchantee ; ajustement des alignements globaux

--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -21,7 +21,7 @@
 					</div>
 					<h2 class="pos-rel font font__title font__title--enchantee">La note enchantée</h2>
 					
-					<h3 class="pos-rel font font__subtitle font__subtitle--enchantee">MENU</h3>
+					<h3 class="pos-rel pos-rel__subtitle font font__subtitle font__subtitle--enchantee">MENU</h3>
 				</div>	
 			</a>
 
