nettoyage des fichiers, fix margin-bottom pour les menu details, fix font-size, ajout de mixins

--- a/Projets/OhMyFood/menu/menu-alafrancaise.html
+++ b/Projets/OhMyFood/menu/menu-alafrancaise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - Le chic à la française : menu</title>
@@ -21,7 +21,7 @@
 				<h2 class="font font__title--alafrancaise">Le chic à la française</h2>
 					
 				<table class="font__table--alafrancaise">
-					<tr class="table__part font__color--alafrancaise-first">
+					<tr class="font__color--alafrancaise-first font__table--title">
 						<th colspan="2" class="double-line double-line--first"><span class="anim-underline anim-underline-first">Pour se mettre en appétit</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-first">
@@ -37,7 +37,7 @@
 						<td class="table__cell--right">57€</td>
 					</tr>
 					
-					<tr class="font__color--alafrancaise-secund table__part">
+					<tr class="font__color--alafrancaise-secund font__table--title">
 						<th colspan="2" class="double-line double-line--secund"><span class="anim-underline anim-underline-secund">Plaisir des papilles</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-secund">
@@ -52,17 +52,17 @@
 						<td class="table__cell--left">Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</td>
 						<td class="table__cell--right">175€</td>
 					</tr>
-					<tr class="font__color--alafrancaise-third table__part">
+					<tr class="font__color--alafrancaise-third font__table--title">
 						<th colspan="2" class="double-line double-line--third"><span class="anim-underline anim-underline-third">Gourmandises sucrées</span></th>
 					</tr>
 					<tr class="font__color--alafrancaise-third">
-						<td class="table__cell--left">Pétales de violettes glacés et purée de noisettes</td>
+						<td colspan="2" class="table__cell--left">Pétales de violettes glacés et purée de noisettes</td>
 					</tr>
 					<tr class="font__color--alafrancaise-third">
-						<td class="table__cell--left">Fondant au chocolat revisité</td>
+						<td colspan="2" class="table__cell--left">Fondant au chocolat revisité</td>
 					</tr>
 					<tr class="font__color--alafrancaise-third">
-						<td class="table__cell--left">Millefeuille croustillant</td>
+						<td colspan="2" class="table__cell--left">Millefeuille croustillant</td>
 					</tr>
 				</table>
 			</section>
