--- a/Projets/OhMyFood/menu/menu-papilles.html
+++ b/Projets/OhMyFood/menu/menu-papilles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - Le délice des papilles : menu</title>
@@ -18,10 +18,10 @@
    			<h2 class="font">Le délice des papilles</h2>
 
 			<section class="papilles menus__card">
-				<h2 class="font__title--papilles">Le délice des papilles</h2>
+				<h2 class="font font__title--papilles">Le délice des papilles</h2>
 					
 				<table class="font__table--papilles">
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line double-line--first"><span class="anim-underline anim-underline-first">Pour bien commencer</span></th>
 					</tr>
 					<tr>
@@ -37,7 +37,7 @@
 						<td class="table__cell--right">56€</td>
 					</tr>
 					
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line double-line--secund"><span class="anim-underline anim-underline-secund">Pour bien continuer</span></th>
 					</tr>
 					<tr>
@@ -52,7 +52,7 @@
 						<td class="table__cell--left">Côte de bœuf angus et sa purée de panais</td>
 						<td class="table__cell--right">115€</td>
 					</tr>
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line double-line--third"><span class="anim-underline anim-underline-third">Pour bien terminer</span></th>
 					</tr>
 					<tr>
