--- a/Projets/OhMyFood/menu/menu-gout.html
+++ b/Projets/OhMyFood/menu/menu-gout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - La palette du goût : menu</title>
@@ -18,10 +18,10 @@
    			<h2 class="font">La palette du goût</h2>
 
 			<section class="gout menus__card">
-				<h2 class="font__title--gout">La palette du goût</h2>
+				<h2 class="font font__title--gout">La palette du goût</h2>
 					
 				<table class="font__table--gout">
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line--gradient"><span class="anim-underline">Esquisse</span></th>
 					</tr>
 					<tr>
@@ -32,12 +32,12 @@
 						<td class="table__cell--left">Œuf au plat assaisonné à la truffe sur lit de caviar</td>
 						<td class="table__cell--right">55€</td>
 					</tr>
-					<tr class="table__row--last">
-						<td class="table__row--last table__cell--left">Foie gras de canard mi-cuit et ses copeaux de truffe noire</td>
-						<td class="table__row--last table__cell--right">65€</td>
+					<tr>
+						<td class="table__cell--left">Foie gras de canard mi-cuit et ses copeaux de truffe noire</td>
+						<td class="table__cell--right">65€</td>
 					</tr>
 					
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line--gradient"><span class="anim-underline">Œuvre du maître</span></th>
 					</tr>
 					<tr>
@@ -52,7 +52,7 @@
 						<td class="table__row--last table__cell--left">Filet de Turbot aux agrumes</td>
 						<td class="table__row--last table__cell--right">125€</td>
 					</tr>
-					<tr class="table__part">
+					<tr class="font__table--title">
 						<th colspan="2" class="double-line--gradient"><span class="anim-underline">sommet de l'art</span></th>
 					</tr>
 					<tr>
