dante = tablette, l'enfer de la tablette

--- a/Projets/OhMyFood/menu/menu-enchantee.html
+++ b/Projets/OhMyFood/menu/menu-enchantee.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../css/style-menu-enchantee.css" />
     </head>
 
-    <body>
+    <body class="center">
 		<a href="ohmyfood.html">
 			<header class="header">
 				<h1>Ohmyfood</h1>
