prefixed & compressed (.min.css), comments available on .css and .scss

--- a/Projets/OhMyFood/menu/menu-alafrancaise.html
+++ b/Projets/OhMyFood/menu/menu-alafrancaise.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - Le chic à la française : menu</title>
-		<link rel="stylesheet" href="../css/style-menu-alafrancaise.css" />
+		<link rel="stylesheet" href="../css/style-menu-alafrancaise.min.css" />
     </head>
 
     <body>
