--- a/Projets/OhMyFood/menu/menu-enchantee.html
+++ b/Projets/OhMyFood/menu/menu-enchantee.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - La note enchantée : menu</title>
-		<link rel="stylesheet" href="../css/style-menu-enchantee.css" />
+		<link rel="stylesheet" href="../css/style-menu-enchantee.min.css" />
     </head>
 
     <body>
