--- a/Projets/OhMyFood/menu/menu-gout.html
+++ b/Projets/OhMyFood/menu/menu-gout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - La palette du goût : menu</title>
-		<link rel="stylesheet" href="../css/style-menu-gout.css" />
+		<link rel="stylesheet" href="../css/style-menu-gout.min.css" />
     </head>
 
     <body>
