--- a/Projets/OhMyFood/menu/menu-papilles.html
+++ b/Projets/OhMyFood/menu/menu-papilles.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 		<title>Ohmyfood - Le délice des papilles : menu</title>
-		<link rel="stylesheet" href="../css/style-menu-papilles.css" />
+		<link rel="stylesheet" href="../css/style-menu-papilles.min.css" />
     </head>
 
     <body>
