--- a/Projets/OhMyFood/ML.html
+++ b/Projets/OhMyFood/ML.html
@@ -1,1 +1,11 @@
-<p>Mentions légales</p>
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="utf-8" />
+		<title>Ohmyfood - Mentions légales</title>
+    </head>
+
+    <body>
+        <p>Mentions légales</p>
+    </body>
+</html>
