--- a/Projets/OhMyFood/menu/menu-enchantee.html
+++ b/Projets/OhMyFood/menu/menu-enchantee.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-		<a href="ohmyfood.html">
+		<a href="../ohmyfood.html">
 			<header class="header">
 				<h1>Ohmyfood</h1>
 			</header>
