correction du lien du header

--- a/Projets/OhMyFood/ML.html
+++ b/Projets/OhMyFood/ML.html
@@ -6,17 +6,9 @@
         <title>Ohmyfood - Mentions légales</title>
         
     </head>
-    
-
-    <footer class="footer">
-        <ul class="footer__list">
-            <li class="btn--footer"><a href="../ML.html" target="_blank">Mentions légales</a><div class="btn__bg"></div></li>
-            <li class="btn--footer"><a href="mailto:team@ohmyfood.com">Contactez-nous</a><div class="btn__bg"></div></li>
-        </ul>
-    </footer>
 
     <body>
-        <a href="../ohmyfood.html">
+        <a href="./ohmyfood.html">
             <header class="header">
                 <h1>Ohmyfood</h1>
             </header>
