ajout d'un lien vers le projet SEO La Chouette Agence

--- a/index.html
+++ b/index.html
@@ -285,9 +285,12 @@
 
 				<section id="Projets" class="l-main-section-xs">
 					<h2 class="l-section-title disco-font"><span class="fas fa-graduation-cap fa-lg icons"></span> PROJETS</h2>
-					<ul class="fa-ul">
+					<ul class="fa-ul l-list-icons">
 						<li class="l-list-items">
 							<a href="./Projets/OhMyFood/ohmyfood.html" class="ohmyfood__link"><article class="ohmyfood"><h1 class="ohmyfood__title">OhMyFood</h1></article></a>
+						</li>
+						<li class="l-list-items">
+							<a href="./Projets/LaChouetteAgence/index.html" class="lachouetteagence__link"><article class="lachouetteagence"><h1 class="lachouetteagence__title">La Chouette Agence</h1></article></a>
 						</li>
 					</ul>
 
