--- a/Projets/LaChouetteAgence/index.html
+++ b/Projets/LaChouetteAgence/index.html
@@ -83,9 +83,10 @@
 	<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 		<div class="container bloc-md">
 			<div class="row">
-				<div class="col-sm-12 text-center">
-					<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-				</div>
+				<h2 class="col-sm-12 text-center">
+					La Chouette Agence est une agence de web design qui aide<br/>
+					les entreprises à devenir attractives et visibles sur internet.
+				</h2>
 			</div>
 			<div class="row voffset-lg med-width-whitespace">
 				<div class="col-sm-4">
@@ -123,9 +124,13 @@
 				</div>
 			</div>
 			<div class="row voffset-lg voffset">
-				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<blockquote class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<p>La Chouette Agence est une excellente agence web ! Les <br/>
+						web designers ont réussis à capturer l'essence de notre<br/>
+						entreprise et à l'intégrer à notre entreprise.Cela nous a aidés à<br/>
+						doubler nos ventes en ligne à Lyon.</p>
+						<footer>Maxime Guibard, PDG de A Vos Fourchettes</footer>
+					</blockquote>
 				</div>
 			</div>
 		</div>
@@ -153,9 +158,9 @@
 	<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 		<div class="container bloc-lg">
 			<div class="row">
-				<div class="col-sm-12 text-center">
-					<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
-				</div>
+				<h2 class="col-sm-12 text-center">
+					Nous travaillons avec beaucoup de clients, voici nos réalisations
+				</h2>
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
