ajout d'un bouton pour accéder au site de base

--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
 						<li class="l-list-items">
 							<a href="./Projets/LaChouetteAgence/index.html" class="lachouetteagence__link"><article class="lachouetteagence"><h1 class="lachouetteagence__title">La Chouette Agence</h1></article></a>
 						</li>
+						<li class="l-list-items">
+							<a href="./Projets/LaChouetteAgence/base/index.html" class="lachouetteagence__link"><article class="lachouetteagence"><h1 class="lachouetteagence__title">La Chouette Agence(base)</h1></article></a>
+						</li>
 					</ul>
 
 				<section id="Recommandations" class="l-main-section-xs">
