--- a/Projets/LaChouetteAgence/index.html
+++ b/Projets/LaChouetteAgence/index.html
@@ -34,11 +34,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/gmaps.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 
     <title>La Chouette Agence - Accueil</title>
 
@@ -150,11 +150,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<blockquote class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p>La Chouette Agence est une excellente agence web ! Les <br/>
+				<p class="text-large">"La Chouette Agence est une excellente agence web ! Les <br/>
 				web designers ont réussis à capturer l'essence de notre<br/>
 				entreprise et à l'intégrer à notre entreprise.Cela nous a aidés à<br/>
-				doubler nos ventes en ligne à Lyon.</p>
-				<footer>Maxime Guibard, PDG de A Vos Fourchettes</footer>
+				doubler nos ventes en ligne à Lyon."</p>
+				<footer class=quote>Maxime Guibard, PDG de A Vos Fourchettes</footer>
 			</blockquote>
 		</div>
 	</div>
@@ -248,7 +248,7 @@
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-orange ">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
@@ -264,7 +264,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center grey">
 					La chouette agence - Agence web basée à Lyon.
 				</p>
 				<div class="row row-no-gutters social">
@@ -292,7 +292,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						Partenaires
-							<ul>
+							<ul class=grey>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
