--- a/Projets/LaChouetteAgence/index.html
+++ b/Projets/LaChouetteAgence/index.html
@@ -53,10 +53,10 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
 	<div class="container bloc-sm">
 
-		<nav class="navbar row">
+		<nav class="navbar row" role="navigation">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Bannière de la Chouette Agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
@@ -260,7 +260,7 @@
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -270,33 +270,33 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.twitter.com" aria-label="compte twitter de la chouette agence"><span class="fa fa-twitter icon-md"></span><br /></a>
+							<a class="social grey" href="https://www.twitter.com" aria-label="compte twitter de la chouette agence"><span class="fa fa-twitter icon-md"></span><br />Twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com" aria-label="compte facebook de la chouette agence"><span class="fa fa-facebook icon-md"></span><br/></a>
+							<a class="social grey" href="https://www.facebook.com" aria-label="compte facebook de la chouette agence"><span class="fa fa-facebook icon-md"></span><br/>Facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.dribble.com" aria-label="compte dribble de la chouette agence"><span class="fa fa-dribbble icon-md"></span><br /></a>
+							<a class="social grey" href="https://www.dribble.com" aria-label="compte dribble de la chouette agence"><span class="fa fa-dribbble icon-md"></span><br />Dribble</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com" aria-label="compte instagram de la chouette agence"><span class="fa fa-instagram icon-md"></span><br /></a>
+							<a class="social grey" href="https://www.instagram.com" aria-label="compte instagram de la chouette agence"><span class="fa fa-instagram icon-md"></span><br />Instagram</a>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
 						Partenaires
-							<ul class=grey>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+							<ul>
+								<li class=grey><a href="voiture.com">voiture.com</a></li>
+								<li class=grey><a href="pizza.com">pizza.com</a></li>
+								<li class=grey><a href="matoiture.com">matoiture.com</a></li>
+								<li class=grey><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 				</div>
