correction des contraste liste partenaire

--- a/Projets/LaChouetteAgence/index.html
+++ b/Projets/LaChouetteAgence/index.html
@@ -293,10 +293,10 @@
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
-								<li class=grey><a href="voiture.com">voiture.com</a></li>
-								<li class=grey><a href="pizza.com">pizza.com</a></li>
-								<li class=grey><a href="matoiture.com">matoiture.com</a></li>
-								<li class=grey><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li><a href="voiture.com" class=grey>voiture.com</a></li>
+								<li><a href="pizza.com" class=grey>pizza.com</a></li>
+								<li><a href="matoiture.com" class=grey>matoiture.com</a></li>
+								<li><a href="immobilierseo.com" class=grey>immobilierseo.com</a></li>
 							</ul>		
 					</div>
 				</div>
