--- a/Projets/LaChouetteAgence/contact.html
+++ b/Projets/LaChouetteAgence/contact.html
@@ -161,22 +161,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span><br />Twitter</a>
+							<a class="social grey" href="index.html"><span class="fa fa-twitter icon-md"></span><br />Twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span><br />Facebook</a>
+							<a class="social grey" href="index.html"><span class="fa fa-facebook icon-md"></span><br />Facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span><br />Dribble</a>
+							<a class="social grey" href="index.html"><span class="fa fa-dribbble icon-md"></span><br />Dribble</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span><br />Instagram</a>
+							<a class="social grey" href="index.html"><span class="fa fa-instagram icon-md"></span><br />Instagram</a>
 						</div>
 					</div>
 				</div>
